--- a/applovin/src/main/res/layout/max_big_native.xml
+++ b/applovin/src/main/res/layout/max_big_native.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/txtTitle"
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
-                    android:background="@color/color_youtube_grayb"
+                    android:background="@color/native_label_ads_background"
                     android:gravity="center"
                     android:text="Ad"
                     android:textAlignment="center"
@@ -61,6 +61,7 @@
                 android:layout_height="75dp">
 
                 <ImageView
+                    android:src="@drawable/applovin_max_test"
                     android:id="@+id/icon_image_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
