--- a/applovin/src/main/res/layout/max_big_native.xml
+++ b/applovin/src/main/res/layout/max_big_native.xml
@@ -107,6 +107,7 @@
                 android:layout_marginRight="5dp"
                 android:background="@drawable/round_black"
                 android:textColor="@color/native_text_button"
+                app:backgroundTint="@color/native_button_install"
                 android:textSize="8sp"
                 tools:text="Install" />
 
